# rezzie

./: CHANGELOG.md  CITATION.cff  README.md  pyproject.toml  release.sh
.github/workflows/: ci.yml
src/rezzie/: __init__.py  exceptions.py
src/rezzie/data/: seq.fasta
tests/: test_get_path.py
