[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rezzie"
authors = [{ name = "Anders Goncalves da Silva", email = "andersgs@gmail.com" }]
description = "A small library to access paths to resources shipped with your package."
readme = "README.md"
requires-python = ">=3.7,<4.0"
keywords = ["resources", "library"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Bioinformatics :: Bioinformatics Tools",
    "Development Status :: 5 - Production/Stable",
]
dependencies = ['importlib-resources; python_version<"3.9"']
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest"]
dev = ["black", "pytest", "isort", "pylint"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rezzie = ["*.fasta"]

[tool.setuptools.dynamic]
version = { attr = "rezzie.__version__" }

[tool.black]
target-version = ['py36', 'py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | tests/data
)/
'''

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.message]
disable = ["E1101"]
